@@ -16,22 +16,26 @@ set -u
 ##   - Orthanc between 0.9.2 and 0.9.4: Boost 1.58.0
 ##   - Orthanc between 0.9.5 and 1.0.0: Boost 1.59.0
 ##   - Orthanc between 1.1.0 and 1.2.0: Boost 1.60.0
-##   - Orthanc >= 1.3.0: Boost 1.64.0
+##   - Orthanc 1.3.0: Boost 1.64.0
+##   - Orthanc >= 1.3.1: Boost 1.65.1
 
-rm -rf /tmp/boost_1_64_0
-rm -rf /tmp/bcp/boost_1_64_0
+BOOST_VERSION=1_65_1
+ORTHANC_VERSION=1.3.1
+
+rm -rf /tmp/boost_${BOOST_VERSION}
+rm -rf /tmp/bcp/boost_${BOOST_VERSION}
 
 cd /tmp
-echo "Uncompressing the sources of Boost 1.64.0..."
-tar xfz ./boost_1_64_0.tar.gz 
+echo "Uncompressing the sources of Boost ${BOOST_VERSION}..."
+tar xfz ./boost_${BOOST_VERSION}.tar.gz 
 
 echo "Generating the subset..."
-mkdir -p /tmp/bcp/boost_1_64_0
-bcp --boost=/tmp/boost_1_64_0 thread system locale date_time filesystem math/special_functions algorithm uuid atomic iostreams program_options numeric/ublas /tmp/bcp/boost_1_64_0
+mkdir -p /tmp/bcp/boost_${BOOST_VERSION}
+bcp --boost=/tmp/boost_${BOOST_VERSION} thread system locale date_time filesystem math/special_functions algorithm uuid atomic iostreams program_options numeric/ublas geometry polygon /tmp/bcp/boost_${BOOST_VERSION}
 cd /tmp/bcp
 
 echo "Compressing the subset..."
-tar cfz boost_1_64_0_bcpdigest-1.3.0.tar.gz boost_1_64_0
-ls -l boost_1_64_0_bcpdigest-1.3.0.tar.gz
-md5sum boost_1_64_0_bcpdigest-1.3.0.tar.gz
-readlink -f boost_1_64_0_bcpdigest-1.3.0.tar.gz
+tar cfz boost_${BOOST_VERSION}_bcpdigest-${ORTHANC_VERSION}.tar.gz boost_${BOOST_VERSION}
+ls -l boost_${BOOST_VERSION}_bcpdigest-${ORTHANC_VERSION}.tar.gz
+md5sum boost_${BOOST_VERSION}_bcpdigest-${ORTHANC_VERSION}.tar.gz
+readlink -f boost_${BOOST_VERSION}_bcpdigest-${ORTHANC_VERSION}.tar.gz
